# GameLib

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
docs/: Event.md  Game.md  StateMachine.md  documentation.md
docs/getting_started/: step1.md  step2.md  step3.md  step4.md  step5.md
docs/reference/: index.md
draft/docs/: GameConfig.md
draft/docs/getting_started/: step1.md  step2.md  step4.md
draft/docs/reference/: index.md
idea/connection/: ClientSession.h  ENetContext.h  Logger.h  PacketHandler.h  Server.h  SessionManager.h
idea/connection copy/: EventFactory.cpp  PacketBuilder.cpp  PacketHandler.cpp  Server.cpp
idea/connection/packet/: Packet.h
include/: IGame.h  IGameConfig.h
include/Client/: Environment.h  Unit.h
include/GameLib/Network/: Network.hpp
include/GameLib/Utils/: AnsiPrint.hpp  Logger.hpp  Time.hpp  Unit.hpp  Uuid.hpp
include/Server/connection/: .info.md
include/Server/core/: Game.h  GameConfig.h  GameEnv.h  GameState.h
include/core/: IGame.h
include/event/: EventBus.h
include/gamelib/: Env.h  Env.hpp  Event.hpp  Game.hpp  Network.hpp  Party.hpp  Utils.hpp
include/gamelib/common/: EngineEB.hpp
include/gamelib/core/: ClientEngine.hpp  Engine.hpp  EngineBuilder.hpp  Env.hpp  Game.hpp  GameConfig.hpp  GameSettings.hpp  GameState.hpp  LocalEngine.hpp  ServerEngine.hpp  StandaloneEngine.hpp
include/model/: IModel.h
include/utils/: AnsiPrint.h
include/view/: ConsoleView.h
src/core/: Game.cpp  GameConfig.cpp  GameSettings.cpp
src/game/: Game.cpp
src/network/: SessionManager.cpp  SessionModel.cpp  TCPClient.cpp  TCPServer.cpp
src/utils/: Logger.cpp
src/view/: ConsoleView.cpp
test/: EventBus.cpp
(+155 files in other folders)
